--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2",
     "csv-parser": "^3.0.0",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
+    "googleapis": "^128.0.0",
     "hardhat-ethers": "^1.0.1",
     "readline": "^1.3.0"
   }
